--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml" fx:controller="com.svalero.ConexionApi.AppController">
-    <padding>
-        <Insets top="10" right="10" bottom="10" left="10"/>
-    </padding>
-    <ListView fx:id="listView" prefHeight="200" prefWidth="300"/>
-    <Button fx:id="button" text="Fetch Data"/>
+<VBox spacing="10" alignment="center" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.svalero.ConexionApi.AppController">
+    <Button fx:id="fetchPostsButton" text="Fetch Posts" />
+    <ListView fx:id="postsListView" />
+
+    <Button fx:id="fetchUsersButton" text="Fetch Users" />
+    <ListView fx:id="usersListView" />
 </VBox>
