--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -7,26 +7,17 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.svalero.ConexionApi.AppController">
-    <top>
-        <HBox spacing="20" alignment="center">
-            <padding>
-                <Insets top="20" right="20" bottom="20" left="20"/>
-            </padding>
-            <Button fx:id="fetchBooksButton" text="Fetch Books" style="-fx-text-fill: blue;"/>
-            <Button fx:id="fetchUsersButton" text="Fetch Users" style="-fx-text-fill: red;" />
-        </HBox>
-    </top>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.svalero.ConexionApi.AppController" >
     <center>
-        <HBox spacing="40">
-            <padding>
-                <Insets top="20" right="20" bottom="20" left="20"/>
-            </padding>
-            <VBox spacing="20" alignment="center" style="-fx-background-color: #f0f0f0; -fx-padding: 10;">
-                <ListView fx:id="booksListView" prefWidth="600" prefHeight="800" />
+        <HBox spacing="5" alignment="center">
+
+            <VBox spacing="20" alignment="center" style="-fx-background-color: #f0f0f0; -fx-padding: 6;">
+                <ListView fx:id="booksListView" prefWidth="2000" prefHeight="700" />
+                <Button fx:id="fetchBooksButton" text="Fetch Books" style="-fx-text-fill: red;"/>
             </VBox>
-            <VBox spacing="20" alignment="center" style="-fx-background-color: #f0f0f0; -fx-padding: 10;">
-                <ListView fx:id="usersListView" prefWidth="600" prefHeight="800" />
+            <VBox spacing="20" alignment="center" style="-fx-background-color: #f0f0f0; -fx-padding: 6;">
+                <ListView fx:id="usersListView" prefWidth="2000" prefHeight="700" />
+                <Button fx:id="fetchUsersButton" text="Fetch Users" style="-fx-text-fill: blue;"/>
             </VBox>
         </HBox>
     </center>
